feat: implement JWT authentication, user CRUD and DOCKER

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,17 +1,15 @@
-spring.application.name=backend
 #===== POSTGRESQL DATABASE CONFIG (PROFILE: prod) =====
 
-# Altere a URL, o nome do banco, usuário e senha conforme sua instalação do PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/vortex_db
-spring.datasource.username=postgres
-spring.datasource.password=sua_senha_secreta_aqui
+# ALTERADO: "localhost" foi trocado por "postgres-db", que será o nome do nosso serviço de banco de dados no docker-compose
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/vortex_db
 
-# Dialeto específico do PostgreSQL para o Hibernate
+# Usuário e senha que definiremos no docker-compose
+spring.datasource.username=postgres
+spring.datasource.password=admin123
+
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# ddl-auto=validate -> verifica se o schema do banco corresponde às entidades. Mais seguro para produção.
-# ddl-auto=update -> atualiza o schema (use com cuidado em produção).
-spring.jpa.hibernate.ddl-auto=validate
+# Em um ambiente com Docker, é seguro usar 'update' para que o Hibernate crie as tabelas na primeira vez
+spring.jpa.hibernate.ddl-auto=update
 
-# Mostra o SQL gerado no console (opcional, bom para depuração)
 spring.jpa.show-sql=true
