--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=backend
 # Escolha o perfil ativo: 'dev' para H2 ou 'prod' para PostgreSQL
 spring.profiles.active=dev
+
+#===== JWT CONFIGURATION =====
+# Chave secreta para assinar o token JWT. Deve ser uma string longa e complexa.
+# Em um ambiente de produção real, use uma variável de ambiente.
+jwt.secret=minha-chave-secreta-super-longa-e-dificil-de-adivinhar-123456
+
+# Tempo de expiração do token em milissegundos (ex: 2 horas)
+# 2 horas = 2 * 60 minutos * 60 segundos * 1000 milissegundos = 7200000
+jwt.expiration=7200000
