--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,15 +1,15 @@
 #===== POSTGRESQL DATABASE CONFIG (PROFILE: prod) =====
 
-# ALTERADO: "localhost" foi trocado por "postgres-db", que será o nome do nosso serviço de banco de dados no docker-compose
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/vortex_db
+# A URL será construída a partir das variáveis de ambiente que o Railway fornecerá
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 
-# Usuário e senha que definiremos no docker-compose
-spring.datasource.username=postgres
-spring.datasource.password=admin123
+# Usuário e senha virão diretamente das variáveis de ambiente
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Em um ambiente com Docker, é seguro usar 'update' para que o Hibernate crie as tabelas na primeira vez
+# 'validate' ou 'update' são boas opções para produção. 'update' é conveniente.
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
