fix: Reescrita do application-prod.properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,15 +1,15 @@
-#===== POSTGRESQL DATABASE CONFIG (PROFILE: prod) =====
-
-# A URL será construída a partir das variáveis de ambiente que o Railway fornecerá
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-
-# Usuário e senha virão diretamente das variáveis de ambiente
+# DB (usa as PG* que você referenciou)
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=disable
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# JPA
+# ou 'none' em produção fixa
+spring.jpa.hibernate.ddl-auto=update   
 
-# 'validate' ou 'update' são boas opções para produção. 'update' é conveniente.
-spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=5
+
+# Porta do web service do Railway
+server.port=${PORT:8080}
