--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,14 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<dependency>
+    <groupId>org.flywaydb</groupId>
+    <artifactId>flyway-core</artifactId>
+</dependency>
+<dependency>
+    <groupId>org.flywaydb</groupId>
+    <artifactId>flyway-database-postgresql</artifactId>
+</dependency>
 
 	<build>
 		<plugins>
