chore: refactor application properties files

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,19 +1,19 @@
-spring.application.name=backend
 #===== H2 DATABASE CONFIG (PROFILE: dev) =====
-
-# URL de conexão para um banco em memória chamado 'vortexdb'
 spring.datasource.url=jdbc:h2:mem:vortexdb
-spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
-# Dialeto específico do H2 para o Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# ddl-auto=create-drop -> cria o banco ao iniciar e o destrói ao finalizar. Ótimo para testes.
-# ddl-auto=update -> atualiza o schema se houver mudanças na entidade.
-spring.jpa.hibernate.ddl-auto=update
-
-# Habilita o console do H2 para visualização do banco no navegador
 spring.h2.console.enabled=true
 # O console estará acessível em: http://localhost:8080/h2-console
+
+#===== JPA / HIBERNATE CONFIG (PROFILE: dev) =====
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+#===== FLYWAY CONFIG (PROFILE: dev) =====
+spring.flyway.enabled=true
+
+#===== JWT CONFIG (PROFILE: dev) =====
+# Chave secreta APENAS para desenvolvimento. Não use em produção.
+jwt.secret=chave-secreta-para-ambiente-de-desenvolvimento-pode-ser-simples
+jwt.expiration=7200000
+
