--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,15 +1,13 @@
-# DB (usa as PG* que você referenciou)
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=disable
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
-
-# JPA
-# ou 'none' em produção fixa
-spring.jpa.hibernate.ddl-auto=update   
-
-spring.jpa.open-in-view=false
+#===== JPA / HIBERNATE CONFIG =====
+# Com o Flyway, o Hibernate agora apenas valida se o schema do banco está correto.
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
+#===== HIKARI CONNECTION POOL CONFIG =====
+# Limita o número de conexões com o banco para se adequar ao plano gratuito.
 spring.datasource.hikari.maximum-pool-size=5
 
-# Porta do web service do Railway
+#===== SERVER CONFIG =====
+# Usa a porta definida pela variável de ambiente PORT do Railway, ou 8080 como padrão.
 server.port=${PORT:8080}
