--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,5 @@
+# Define o nome da aplicação
 spring.application.name=backend
-# Escolha o perfil ativo: 'dev' para H2 ou 'prod' para PostgreSQL
+
+# Define 'dev' como o perfil padrão a ser ativado quando nenhum outro for especificado
 spring.profiles.active=dev
-
-#===== JWT CONFIGURATION =====
-# Chave secreta para assinar o token JWT. Deve ser uma string longa e complexa.
-# Em um ambiente de produção real, use uma variável de ambiente.
-#jwt.secret=minha-chave-secreta-super-longa-e-dificil-de-adivinhar-123456
-jwt.secret=${JWT_SECRET}
-
-# Tempo de expiração do token em milissegundos (ex: 2 horas)
-# 2 horas = 2 * 60 minutos * 60 segundos * 1000 milissegundos = 7200000
-jwt.expiration=7200000
