chore: refactor application properties files

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,14 @@
-#===== JPA / HIBERNATE CONFIG =====
-# Com o Flyway, o Hibernate agora apenas valida se o schema do banco está correto.
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
-
-#===== HIKARI CONNECTION POOL CONFIG =====
-# Limita o número de conexões com o banco para se adequar ao plano gratuito.
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=require
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.datasource.hikari.maximum-pool-size=5
 
-#===== SERVER CONFIG =====
-# Usa a porta definida pela variável de ambiente PORT do Railway, ou 8080 como padrão.
-server.port=${PORT:8080}
+# Flyway ligado (vai criar as tabelas a partir da V1)
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.clean-disabled=true   # mantenha TRUE em prod
+
+# Hibernate só valida o que o Flyway criou
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=false
