--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-# Define o nome da aplicação
 spring.application.name=backend
 
-# Define 'dev' como o perfil padrão a ser ativado quando nenhum outro for especificado
 spring.profiles.active=dev
+
+server.port=${PORT:8080}
+
+# Logs (ajuste se quiser)
+logging.level.org.springframework=INFO
+logging.level.org.flywaydb=INFO
