--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,19 +1,20 @@
-#===== H2 DATABASE CONFIG (PROFILE: dev) =====
-spring.datasource.url=jdbc:h2:mem:vortexdb
+# ===== H2 (DEV) =====
+spring.datasource.url=jdbc:h2:mem:vortexdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
-# O console estará acessível em: http://localhost:8080/h2-console
+# http://localhost:8080/h2-console
 
-#===== JPA / HIBERNATE CONFIG (PROFILE: dev) =====
-spring.jpa.hibernate.ddl-auto=none
+# ===== JPA (DEV) =====
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-#===== FLYWAY CONFIG (PROFILE: dev) =====
+# ===== Flyway (DEV) =====
 spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
 
-#===== JWT CONFIG (PROFILE: dev) =====
-# Chave secreta APENAS para desenvolvimento. Não use em produção.
-jwt.secret=chave-secreta-para-ambiente-de-desenvolvimento-pode-ser-simples
+# ===== JWT (DEV) =====
+jwt.secret=chave-secreta-apenas-dev
 jwt.expiration=7200000
-
