chore: refactor application properties files

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,7 +6,8 @@ spring.datasource.hikari.maximum-pool-size=5
 # Flyway ligado (vai criar as tabelas a partir da V1)
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-spring.flyway.clean-disabled=true   # mantenha TRUE em prod
+# mantenha TRUE em prod
+spring.flyway.clean-disabled=true   
 
 # Hibernate só valida o que o Flyway criou
 spring.jpa.hibernate.ddl-auto=validate
