--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,20 +1,18 @@
-# ===== H2 (DEV) =====
-spring.datasource.url=jdbc:h2:mem:vortexdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+#===== H2 DATABASE CONFIG (PROFILE: dev) =====
+spring.datasource.url=jdbc:h2:mem:vortexdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
-# http://localhost:8080/h2-console
 
-# ===== JPA (DEV) =====
+#===== JPA / HIBERNATE CONFIG (PROFILE: dev) =====
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-# ===== Flyway (DEV) =====
+#===== FLYWAY CONFIG (PROFILE: dev) =====
 spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
 
-# ===== JWT (DEV) =====
-jwt.secret=chave-secreta-apenas-dev
+#===== JWT CONFIG (PROFILE: dev) =====
+jwt.secret=chave-secreta-para-ambiente-de-desenvolvimento-pode-ser-simples
 jwt.expiration=7200000
