--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
+# application.properties
 spring.application.name=backend
-
-spring.profiles.active=dev
-
 server.port=${PORT:8080}
 
-# Logs (ajuste se quiser)
 logging.level.org.springframework=INFO
 logging.level.org.flywaydb=INFO
