--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,11 @@
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=require
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.hikari.maximum-pool-size=5
 
 # Flyway ligado (vai criar as tabelas a partir da V1)
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-# mantenha TRUE em prod
 spring.flyway.clean-disabled=true   
 
 # Hibernate só valida o que o Flyway criou
